Fixed text alignment issue in button that was triggering my OCD

--- a/org.matonto.web/src/main/resources/public/modules/datasets/directives/datasetsList/datasetsList.scss
+++ b/org.matonto.web/src/main/resources/public/modules/datasets/directives/datasetsList/datasetsList.scss
@@ -56,6 +56,11 @@
             padding-right: 10px;
             padding-top: 10px;
             
+            button {
+                i {
+                    vertical-align: middle;
+                }
+            }
             .dropdown-menu {
                 right: 10px;
                 left: inherit;
